Improve XPath test framework